# RetroSpriteEditor

./: README.md  meson.build
data/: io.github.xverizex.RetroSpriteEditor.desktop.in  io.github.xverizex.RetroSpriteEditor.gschema.xml  io.github.xverizex.RetroSpriteEditor.metainfo.xml.in  meson.build
data/icons/: meson.build
src/: custom-math.c  frame-platform.c  frame-platform.h  general-tools.h  global-functions.c  global-functions.h  main-window.c  main-window.h  main.c  meson.build  nes-current-palette.c  nes-current-palette.h  nes-frame-megatile.c  nes-frame-megatile.h  nes-item-palette.c  nes-item-palette.h  nes-list-palettes.c  nes-list-palettes.h  nes-new-project.c  nes-new-project.h  nes-palette.c  nes-palette.h  nes-screen-background.c  nes-screen-background.h  nes-setup-palette.c  nes-setup-palette.h  project.c  project.h  retro-app.c  retro-app.h  retro-canvas.c  retro-canvas.h  retrospriteeditor-application.c  retrospriteeditor-canvas.c  retrospriteeditor-canvas.h  retrospriteeditor-nes-current-palette.c  retrospriteeditor-nes-current-palette.h  retrospriteeditor-nes-item-palette.c  retrospriteeditor-nes-item-palette.h  retrospriteeditor-nes-list-palettes.c  (+24 more)
subprojects/: libxml2.wrap
